@@ -6,6 +6,7 @@ from sqlalchemy.orm import *
 from sqlalchemy.orm.shard import ShardedSession
 from sqlalchemy.sql import operators
 from testlib import *
+from testlib.testing import eq_
 
 # TODO: ShardTest can be turned into a base for further subclasses
 
@@ -142,18 +143,19 @@ class ShardTest(TestBase):
         tokyo.city   # reload 'city' attribute on tokyo
         sess.clear()
 
-        assert db2.execute(weather_locations.select()).fetchall() == [(1, 'Asia', 'Tokyo')]
-        assert db1.execute(weather_locations.select()).fetchall() == [(2, 'North America', 'New York'), (3, 'North America', 'Toronto')]
-
+        eq_(db2.execute(weather_locations.select()).fetchall(), [(1, 'Asia', 'Tokyo')])
+        eq_(db1.execute(weather_locations.select()).fetchall(), [(2, 'North America', 'New York'), (3, 'North America', 'Toronto')])
+        eq_(sess.execute(weather_locations.select(), shard_id='asia').fetchall(), [(1, 'Asia', 'Tokyo')])
+        
         t = sess.query(WeatherLocation).get(tokyo.id)
-        assert t.city == tokyo.city
-        assert t.reports[0].temperature == 80.0
+        eq_(t.city, tokyo.city)
+        eq_(t.reports[0].temperature, 80.0)
 
         north_american_cities = sess.query(WeatherLocation).filter(WeatherLocation.continent == 'North America')
-        assert set([c.city for c in north_american_cities]) == set(['New York', 'Toronto'])
+        eq_(set([c.city for c in north_american_cities]), set(['New York', 'Toronto']))
 
         asia_and_europe = sess.query(WeatherLocation).filter(WeatherLocation.continent.in_(['Europe', 'Asia']))
-        assert set([c.city for c in asia_and_europe]) == set(['Tokyo', 'London', 'Dublin'])
+        eq_(set([c.city for c in asia_and_europe]), set(['Tokyo', 'London', 'Dublin']))
 
 
 
